syntax = "proto3";

package user;

service UserService {
  rpc GetUser (GetUserRequest) returns (User);
  rpc CreateUser (CreateUserRequest) returns (User);
  rpc Login (LoginRequest) returns (LoginResponse);
}

message User {
  string id = 1;
  string username = 2;
  string full_name = 3;
  string bio = 4;
}

message GetUserRequest {
  string id = 1;
}

message CreateUserRequest {
  string username = 1; // email
  string full_name = 2;
  string bio = 3;
  string password = 4;
  string role = 5; // 'creator' or 'investor'
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
  User user = 2;
}
